# weishaupt_webif_api

./: .gitignore  README.md  log.txt  lwp_cookies.txt  lwp_state.json  pyproject.toml
.github/workflows/: publish.yml
src/weishaupt_webif_api/: __init__.py  __main__.py  api.py  const.py  exceptions.py
tests/: conftest.py  test_api.py  test_parser.py
tests/fixtures/: info_2wez.html  info_hk1.html  info_statistik.html  info_wp.html
